--- a/style.css
+++ b/style.css
@@ -1,20 +1,222 @@
+*{
+  padding: 0;
+  margin: 0;
+  text-decoration: none;
+  list-style: none;
+  box-sizing: border-box;
+}
+body{
+  font-family: 'Nunito', sans-serif;
+}
+nav{
+  background: #fbfdff;
+  height: 80px;
+  width: 100%;
+  border: 1px solid black;
+  position: fixed; 
+}
+label.logo{
+  color: rgb(13, 48, 252);
+  font-size: 35px;
+  line-height: 80px;
+  padding: 0 100px;
+  font-weight: bold;
+}
+nav ul{
+  float: right;
+  margin-right: 20px;
+}
+nav ul li{
+  display: inline-block;
+  line-height: 80px;
+  margin: 0 5px;
+}
+nav ul li a{
+  color:black;
+  font-size: 17px;
+  padding: 7px 13px;
+  border-radius: 3px;
+  text-transform: uppercase;
+}
+a.active,a:hover{
+  background: #1b9bff;
+  transition: .5s;
+}
+.checkbtn{
+  font-size: 30px;
+  color: rgb(7, 7, 7);
+  float: right;
+  line-height: 80px;
+  margin-right: 40px;
+  cursor: pointer;
+  display: none;
+}
+#check{
+  display: none;
+}
+
 .loader {
-    border: 16px solid #f3f3f3;
-    border-radius: 50%;
-    border-top: 16px solid #3498db;
-    width: 120px;
-    height: 120px;
-    -webkit-animation: spin 2s linear infinite; /* Safari */
-    animation: spin 2s linear infinite;
-  }
+  border: 16px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 16px solid #3498db;
+  width: 120px;
+  height: 120px;
+  -webkit-animation: spin 2s linear infinite; /* Safari */
+  animation: spin 2s linear infinite;
+}
+
+/* Safari */
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+
+
+#main_area {
+
+display: flex;
+flex-wrap: wrap;
+flex-direction: row;
+}
+
+#main_area div {
+border: 1px solid black;
+border-radius: 5px;
+padding: 1rem;
+margin: 1rem;
+text-align: center;
+
+cursor:pointer;
+}
+
+
+.move-away-fromscreen{
+margin-left: 1rem;
+}
+
+.text-center {
+text-align: center;
+}
+
+.text-bigger {
+  font-size: 2rem;
+}
+
+
+.box-link {
+border: 1px solid blue;
+padding: 1rem;
+border-radius: 5px;
+width: 80%;
+}
+
+
+.quote {
+  margin: 1rem;
+  margin-top: 5rem;
+  margin-left: 5rem;
+}
+
+.main {
+display: flex;
+flex-wrap: wrap;
+flex-direction: row;
+}
+
+#img-logo {
+  margin: 1rem;
+}
+
+.remove_anchor_hover:hover {
+ background: white;
+}
+
+
+.quote-text {
+  text-transform: uppercase;
+  padding: 15px;
   
-  /* Safari */
-  @-webkit-keyframes spin {
-    0% { -webkit-transform: rotate(0deg); }
-    100% { -webkit-transform: rotate(360deg); }
+}
+@media (max-width: 858px){
+  label.logo{
+    font-size: 30px;
+    padding-left: 50px;
   }
+
+  nav ul li a{
+    font-size: 16px;
+  }
+}
+
+.text-content {
+  padding:1rem ;
+}
+
+.text-content p {
+  padding: 5px;
+
+}
+.away-from-navbar {
+  padding-top: 5rem;
+}
+
+
+
+/* for mobile */
+@media (max-width: 858px){
+  .checkbtn{
+    display: block;
+  }
+  ul{
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background:#e3e8ee;
+    top: 80px;
+    left: -100%;
+    text-align: center;
+    transition: all .5s;
+    z-index: 1;
+  }
+
+  #main_area {
+    flex-direction: column;
+  }
+  nav ul li{
+    display: block;
+    margin: 50px 0;
+    line-height: 30px;
+  }
+  nav ul li a{
+    font-size: 20px;
+  }
+  a:hover,a.active{
+    background: none;
+    color: #0082e6;
+  }
+  #check:checked ~ ul{
+    left: 0;
+  }
+  .main {
+  flex-direction: column;
+  }
+
+  #img-logo {
+    margin: 5px;
+  }
+  .quote {
+    
+    
+    margin-left: 0rem;
   
-  @keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
   }
+
+}
+
+
