--- a/style.css
+++ b/style.css
@@ -5,18 +5,27 @@
   list-style: none;
   box-sizing: border-box;
 }
+
+a {
+  text-decoration: none;
+  color: pink;
+}
 body{
+  background-color: black;
+  color: white;
   font-family: 'Nunito', sans-serif;
 }
 nav{
-  background: #fbfdff;
+  background: #000000;
   height: 80px;
   width: 100%;
   border: 1px solid black;
   position: fixed; 
+  border: 2px solid white;
+  z-index: 1;
 }
 label.logo{
-  color: rgb(13, 48, 252);
+  color: rgb(255, 255, 255);
   font-size: 35px;
   line-height: 80px;
   padding: 0 100px;
@@ -32,7 +41,7 @@ nav ul li{
   margin: 0 5px;
 }
 nav ul li a{
-  color:black;
+  color:rgb(255, 255, 255);
   font-size: 17px;
   padding: 7px 13px;
   border-radius: 3px;
@@ -44,7 +53,7 @@ nav ul li a{
 }
 .checkbtn{
   font-size: 30px;
-  color: rgb(7, 7, 7);
+  color: rgb(255, 255, 255);
   float: right;
   line-height: 80px;
   margin-right: 40px;
@@ -55,15 +64,40 @@ nav ul li a{
   display: none;
 }
 
+
 .loader {
-  border: 16px solid #f3f3f3;
-  border-radius: 50%;
-  border-top: 16px solid #3498db;
-  width: 120px;
-  height: 120px;
-  -webkit-animation: spin 2s linear infinite; /* Safari */
-  animation: spin 2s linear infinite;
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
 }
+.loader:after {
+  content: " ";
+  display: block;
+  border-radius: 50%;
+  width: 0;
+  height: 0;
+  margin: 8px;
+  box-sizing: border-box;
+  border: 5rem solid #d9cf1f;
+  border-color: #d9cf1f transparent #d9cf1f transparent;
+  animation: lds-hourglass 1.2s infinite;
+}
+@keyframes lds-hourglass {
+  0% {
+    transform: rotate(0);
+    animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
+  }
+  50% {
+    transform: rotate(900deg);
+    animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+  }
+  100% {
+    transform: rotate(1800deg);
+  }
+}
+
+
 
 /* Safari */
 @-webkit-keyframes spin {
@@ -84,7 +118,7 @@ grid-template-columns: auto auto ;
 }
 
 #main_area div {
-border: 1px solid black;
+border: 1px solid rgb(0, 60, 255);
 border-radius: 5px;
 padding: 1rem;
 margin: 1rem;
@@ -122,9 +156,9 @@ width: 80%;
 }
 
 .main {
-display: flex;
-flex-wrap: wrap;
-flex-direction: row;
+   display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 #img-logo {
@@ -180,12 +214,12 @@ flex-direction: row;
     position: fixed;
     width: 100%;
     height: 100vh;
-    background:#e3e8ee;
+    background:#050505;
     top: 80px;
     left: -100%;
     text-align: center;
     transition: all .5s;
-    z-index: -1;
+ 
   }
 
 
@@ -197,10 +231,7 @@ flex-direction: row;
   nav ul li a{
     font-size: 20px;
   }
- nav  a:hover,a.active{
-    background: none;
-    color: #0082e6;
-  }
+
   #check:checked ~ ul{
     left: 0;
   }
@@ -232,3 +263,95 @@ flex-direction: row;
   background-color: white;
 }
 
+
+
+
+
+
+
+.btnMain {
+  /* overflow: hidden; */
+  z-index: 5;
+  transition: cubic-bezier(0.83, -0.01, 0.23, 1.01);
+  animation: float 2s ease-in-out infinite;
+}
+
+.btn3d {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 2em;
+  border: none;
+  background-color: yellow;
+  padding: 30px 80px 30px 80px;
+  transform-style: preserve-3d;
+  transform: perspective(800px) rotateX(40deg);
+  z-index: 3;
+  color: black;
+}
+
+.btn3d::before {
+  overflow: hidden;
+  content: " ";
+  position: absolute;
+  top: 100%;
+  left: 0%;
+  width: 100%;
+  height: 30%;
+  background-color: #d9cf1f;
+  z-index: 2;
+  transform-origin: 0% 0%;
+  transform: rotateX(-100deg);
+  background-blend-mode: soft-light;
+}
+
+.btn3d,
+.btn3d::before {
+  background-image: linear-gradient(
+    90deg,
+    transparent 40px,
+    white 40px,
+    white 100px,
+    transparent 10px,
+    transparent 120px,
+    white 120px,
+    white 140px,
+    transparent 140px,
+    transparent 300px
+  );
+  background-position: 0px 0px;
+  animation: shine 5s infinite;
+}
+
+@keyframes shine {
+  0% {
+    background-position: -150px 0px;
+  }
+  /* 50%{
+        background-position: 250px 0px;
+    } */
+  100% {
+    background-position: 416px 0px;
+  }
+}
+
+@keyframes float {
+  0% {
+    transform: translatey(-10px);
+    /* margin-bottom: 0px; */
+  }
+  50% {
+    transform: translatey(0px);
+    /* margin-bottom: 20px; */
+  }
+  100% {
+    transform: translatey(-10px);
+    /* margin-bottom: 00px; */
+  }
+}
+
+.btn3d a:hover {
+  background-color: yellow;
+}
+
+.backarrow a:hover {
+  background-color: black;
+}
