--- a/style.css
+++ b/style.css
@@ -66,45 +66,40 @@ nav ul li a{
 
 
 .loader {
-  display: inline-block;
-  position: relative;
-
-}
-.loader:after {
-  content: " ";
-  display: block;
+  
+  width:400px;
+  height: 400px;
+  background-color: skyblue;
   border-radius: 50%;
-
-  box-sizing: border-box;
-  border: 5rem solid #d9cf1f;
-  border-color: #d9cf1f transparent #d9cf1f transparent;
-  animation: lds-hourglass 1.2s infinite;
+  position: relative;
+  box-shadow: inset 0 0 30px 0 rgba(0,0,0,.5), 0 4px 10px 0 rgba(0,0,0,.5);
+  overflow: hidden;
 }
-@keyframes lds-hourglass {
-  0% {
-    transform: rotate(0);
-    animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
-  }
-  50% {
-    transform: rotate(900deg);
-    animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
-  }
-  100% {
-    transform: rotate(1800deg);
-  }
+.loader:before, .water:after{
+  content:'';
+  position: absolute;
+  width:400px;
+  height: 400px;
+  top:-150px;
+  background-color: #fff;
 }
-
-
-
-/* Safari */
-@-webkit-keyframes spin {
-  0% { -webkit-transform: rotate(0deg); }
-  100% { -webkit-transform: rotate(360deg); }
+.loader:before{
+  border-radius: 45%;
+  background:rgba(255,255,255,.7);
+  animation:wave 5s linear infinite;
 }
-
-@keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+.loader:after{
+  border-radius: 35%;
+  background:rgba(255,255,255,.3);
+  animation:wave 5s linear infinite;
+}
+@keyframes wave{
+  0%{
+      transform: rotate(0);
+  }
+  100%{
+      transform: rotate(360deg);
+  }
 }
 
 
