--- a/style.css
+++ b/style.css
@@ -64,45 +64,26 @@ nav ul li a{
   display: none;
 }
 
-
 .loader {
-  
-  width:400px;
-  height: 400px;
-  background-color: skyblue;
+  border: 16px solid #f3f3f3;
   border-radius: 50%;
-  position: relative;
-  box-shadow: inset 0 0 30px 0 rgba(0,0,0,.5), 0 4px 10px 0 rgba(0,0,0,.5);
-  overflow: hidden;
-}
-.loader:before, .water:after{
-  content:'';
-  position: absolute;
-  width:400px;
-  height: 400px;
-  top:-150px;
-  background-color: #fff;
-}
-.loader:before{
-  border-radius: 45%;
-  background:rgba(255,255,255,.7);
-  animation:wave 5s linear infinite;
-}
-.loader:after{
-  border-radius: 35%;
-  background:rgba(255,255,255,.3);
-  animation:wave 5s linear infinite;
-}
-@keyframes wave{
-  0%{
-      transform: rotate(0);
-  }
-  100%{
-      transform: rotate(360deg);
-  }
+  border-top: 16px solid #3498db;
+  width: 120px;
+  height: 120px;
+  -webkit-animation: spin 2s linear infinite; /* Safari */
+  animation: spin 2s linear infinite;
 }
 
+/* Safari */
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
 
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
 
 #main_area {
 display: grid;
