--- a/style.css
+++ b/style.css
@@ -336,3 +336,11 @@ width: 80%;
  border-radius: 5px;
  text-transform: uppercase;
 }
+
+.link-area {
+  width: 100%;
+  border: 2px solid black;
+  border-radius: 5px;
+  background-color: #080808;
+  margin: 1rem;
+}
